--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#039BE5</item>
-        <item name="colorPrimaryDark">#81D4FA</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">#36D1DC</item>
+        <item name="colorAccent">#039BE5</item>
     </style>
 
 </resources>
